--- a/movies/templates/movies/movie_detail.html
+++ b/movies/templates/movies/movie_detail.html
@@ -36,7 +36,7 @@
                         <img src="https://image.tmdb.org/t/p/original/{{ movie.backdrop_path }}" 
                             class="carousel-main-img d-block w-100" alt="backdrop img">
                     {% else %}
-                        <img src="https://lh3.googleusercontent.com/proxy/XkgLlyP13mdoRTF0M2OEXW_L_DrqotTZlQv4MWLcwUSx6dF0BbxJbgIWKesa054mL6nmHnuog0zs3ST-j8Vfrlqt4QUpRKHU9v9Ol5We1m-VtY_m8q-uGyAo0uH75huN" 
+                        <img src="/static/images/cinema_login.jpg" 
                             class="carousel-main-img d-block w-100" alt="backdrop img">
                     {% endif %}
                 </div>
