--- a/movies/templates/movies/_recommend_saved.html
+++ b/movies/templates/movies/_recommend_saved.html
@@ -6,8 +6,13 @@
       <div class="row">
         {% for movie in saved_top_a %}
           <div class="col text-center img-hover-zoom" id="movie-{{ movie.id }}" onclick="goDetail(event, `{% url 'movies:movie_detail' movie.pk %}`)">
-            <img class="img-fluid" style="height: 270px;"
-              src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}" alt="Image Poster" />
+            {% if movie.poster_path %}
+              <img class="img-fluid" style="height: 270px;"
+                src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}" alt="Image Poster" />
+            {% else %}
+              <img class="img-fluid" style="height: 270px;"
+                src="https://media.comicbook.com/files/img/default-movie.png" alt="Image Poster" />
+            {% endif %}
           </div>
         {% endfor %}
       </div>
@@ -17,8 +22,13 @@
       <div class="row">
         {% for movie in saved_top_b %}
           <div class="col text-center img-hover-zoom" id="movie-{{ movie.id }}" onclick="goDetail(event, `{% url 'movies:movie_detail' movie.pk %}`)">
-            <img class="img-fluid" style="height: 270px;"
-              src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}" alt="Image 6" />
+            {% if movie.poster_path %}
+              <img class="img-fluid" style="height: 270px;"
+                src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}" alt="Image Poster" />
+            {% else %}
+              <img class="img-fluid" style="height: 270px;"
+                src="https://media.comicbook.com/files/img/default-movie.png" alt="Image Poster" />
+            {% endif %}
           </div>
         {% endfor %}
       </div>
@@ -41,7 +51,6 @@
 
 <script>
   function goDetail(event, url) {
-    console.log('div')
     window.location.href = url;
   }
 </script>
